--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   <title>We Run This</title>
 </head>
 <body>
-	<h1>We Run This!</h1>
+	<div id = "container">
+		<h1>We Run This!</h1>
 
-	<form id = "new-route-form">
-		<label>Route Name: </label><input id = "route-name-input" type = "text" />
-		<label>Your Name: </label><input id = "user-name-input" type = "text" />
-		<button class = "btn">Add to List!</button>
-		<hr>
-	</form>
+		<form id = "new-route-form">
+			<label>Route Name: </label><input id = "route-name-input" type = "text" />
+			<label>Your Name: </label><input id = "user-name-input" type = "text" />
+			<button class = "btn">Add to List!</button>
+			<hr>
+		</form>
 
-	<ul id = "routes-list"></ul>
+		<ul id = "routes-list"></ul>
+	</div>
 </body>
 
 
@@ -22,6 +24,7 @@
 <script src="jquery.js"></script>
 <script src="underscore.js"></script>
 <script src="backbone.js"></script>
+<script src="backbone.localStorage.js"></script>
 <script src="application.js"></script>
 
 
