save overlays to map on formSubmit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       		<input type="button" value="Re-center Map" onclick="reCenterMap()">
     	</div>
 
-		<div id="map-canvas"></div>
+		<div id="map-canvas" class = "map-canvas"></div>
 		<button onclick = "clearRoutes();">Clear Route</button>
 		<button onclick = "clearMarkers();">Clear Markers</button>
 		<hr>
@@ -30,6 +30,7 @@
 		<h2>Route List</h2>
 		<ul id = "routes-list">
 		</ul>
+		<div id="map-canvas2" class = "map-canvas"></div>
 	</div>
 
 </body>
