add maps working, bug with no marker after first submit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<button class = "btn">Add to List!</button>
 		</form>
 
-		<div id="map-container">
+		<div class="map-container">
 			<div id="geocode-input">
 				<label>Location: </label>
 				<input id="location-input" type="textbox" placeholder="Enter Location">
@@ -38,7 +38,6 @@
 			<h2>Route List</h2>
 			<ul id = "routes-list">
 			</ul>
-			<div id="map-canvas2" class = "map-canvas"></div>
 		</div>
 	</div>
 
