--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		
 		<div id = "route-list-container">
 			<h2>Route List</h2>
-			<ul id = "routes-list">
+			<ul id = "route-list">
 			</ul>
 		</div>
 	</div>
